--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -12,7 +12,7 @@
       </div>
 
       <div>
-        <a href="/movies/<%= @the_movie.id %>" data-method = "delete">
+        <a href="/movies/<%= @the_movie.id %>" data-turbo-method = "delete">
           Delete movie
         </a>
       </div>
@@ -66,7 +66,11 @@
       Edit movie
     </h2>
 
-    <form action="/modify_movie/<%= @the_movie.id %>"  method="post" data-turbo="false">
+    <form action="/movies/<%= @the_movie.id %>"  method="post" data-turbo="false">
+
+    <input type ="hidden" value="<%= form_authenticity_token %> name = "authenticity_token" >
+    <input type ="hidden" value="patch" name = "_method" >
+
       <div>
         <label for="title_box">
           Title
