--- a/app/views/movies/edit.html.erb
+++ b/app/views/movies/edit.html.erb
@@ -2,7 +2,7 @@
       Update movie
     </h2>
 
-    <form action="/movies" method="post" data-turbo = "false" >
+    <form action="/movies/<%= @the_movie.id%>" method="post" data-turbo = "false" >
       
       <input type ="hidden" name = "authenticity_token" value = "<%= form_authenticity_token %>">
       <div>
